fud2/fud-core/tests/flang/snapshots/tests__flang__basic_parse.snap
---
source: fud2/fud-core/tests/flang/mod.rs
expression: ast
---
AssignmentList {
    assigns: [
        Assignment {
            vars: [
                "x",
            ],
            value: Op {
                name: "input",
                args: [
                    "a",
                    "b",
                ],
            },
        },
        Assignment {
            vars: [
                "z",
                "y",
            ],
            value: Op {
                name: "f",
                args: [
                    "x",
                ],
            },
        },
    ],
}
