fud2/fud-core/tests/flang/snapshots/tests__flang__empty_file.snap
---
source: fud2/fud-core/tests/flang/mod.rs
expression: ast
---
AssignmentList {
    assigns: [],
}
