fud2/fud-core/tests/flang/snapshots/tests__flang__ignore_input.snap
---
source: fud2/fud-core/tests/flang/mod.rs
expression: ast
---
AssignmentList {
    assigns: [
        Assignment {
            vars: [
                "_",
            ],
            value: Op {
                name: "input",
                args: [],
            },
        },
    ],
}
