fud2/fud-core/tests/flang/snapshots/tests__flang__no_args.snap
---
source: fud2/fud-core/tests/flang/mod.rs
expression: ast
---
AssignmentList {
    assigns: [
        Assignment {
            vars: [
                "x",
            ],
            value: Op {
                name: "input",
                args: [],
            },
        },
    ],
}
