fud2/fud-core/tests/flang/snapshots/tests__flang__simple_serialization.snap
---
source: fud2/fud-core/tests/flang/mod.rs
expression: s
---
a, b, c, d, e, f = input(g, h, i, j, k);
l, m, n, o = go(p, q, r, s, t);
u, v = stop(w, x, y, z);
