fud2/fud-core/tests/flang/snapshots/tests__flang__spaces_in_id.snap
---
source: fud2/fud-core/tests/flang/mod.rs
expression: ast
---
AssignmentList {
    assigns: [
        Assignment {
            vars: [
                "x lkjsdf - \\\" \"",
            ],
            value: Op {
                name: "cool ids",
                args: [],
            },
        },
    ],
}
