fud2/fud-core/tests/flang/snapshots/tests__flang__unicode_ids.snap
---
source: fud2/fud-core/tests/flang/mod.rs
expression: ast
---
AssignmentList {
    assigns: [
        Assignment {
            vars: [
                "Æ",
            ],
            value: Op {
                name: "Ë",
                args: [
                    "Ð",
                ],
            },
        },
    ],
}
