fud2/fud-core/tests/flang/snapshots/tests__flang__weird_whitespace.snap
---
source: fud2/fud-core/tests/flang/mod.rs
expression: ast
---
AssignmentList {
    assigns: [
        Assignment {
            vars: [
                "a",
                "b",
                "c",
            ],
            value: Op {
                name: "wah",
                args: [
                    "c",
                    "d",
                ],
            },
        },
        Assignment {
            vars: [
                "e",
                "f",
            ],
            value: Op {
                name: "g",
                args: [
                    "h",
                    "i",
                ],
            },
        },
    ],
}
